--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
     compile 'com.android.support:design:25.3.0'
+    compile 'com.android.support:recyclerview-v7:24.0.0'
     testCompile 'junit:junit:4.12'
 }
