--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,11 +28,18 @@
         <activity
             android:name=".AboutUsAppCompatActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".CoordinateChannelsAppCompatActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".CoordinateChannelsAppCompatActivity"
             android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LecturesActivityFragmentActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".LectureActivity"
+            android:label="@string/title_activity_lecture"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".LecturesActivityFragmentActivity"
-            android:label="@string/app_name"></activity>
     </application>
+
 </manifest>
