--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,7 @@
         <activity
             android:name=".MainAppCompatActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".AboutUsAppCompatActivity"
             android:label="@string/app_name"
@@ -41,6 +35,16 @@
             android:name=".LectureActivity"
             android:label="@string/title_activity_lecture"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MeetingsActivityFragmentActivity"
+            android:label="@string/title_activity_meeting"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MusicActivity"
             android:label="@string/title_activity_music"
