--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
             android:name=".InternetNotConnectedActivity"
             android:theme="@style/Base.V7.Theme.AppCompat.Dialog" />
         <activity
+            android:name=".PleaseUpdateActivity"
+            android:theme="@style/Base.V7.Theme.AppCompat.Dialog" />
+        <activity
             android:name=".MainAppCompatActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
@@ -48,7 +51,7 @@
         <activity
             android:name=".GalleryActivity"
             android:label="@string/title_activity_gallery"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
